# Rust_100Days

./: .gitignore  README.md  cargo_commands.md  crate_list.md  reading_list.txt
actix-gcd/src/: main.rs
command-line-rust-main/cli_practice/clap_derive/: Cargo.toml
command-line-rust-main/cli_practice/clap_derive/src/: main.rs
command-line-rust-main/command-line-rust-main/03_catr/src/: lib.rs
command-line-rust-main/follow_along/catr/src/: lib.rs  main.rs
command-line-rust-main/follow_along/echor/: err
command-line-rust-main/follow_along/echor/src/: main.rs
command-line-rust-main/todo-cli/: db.txt
command-line-rust-main/todo-cli/src/: main.rs
data_analysis/: Enums.ipynb  Rust_in_Jupyter.ipynb  Untitled.ipynb  experiment.rs
data_analysis/.ipynb_checkpoints/: Rust_in_Jupyter-checkpoint.ipynb
guessing_game/src/: main.rs
hello/src/: main.rs
hello_cargo/restaurant/src/: lib.rs
hello_cargo/src/: main.rs
hello_world/: main.rs
hw_hf_parser/: Cargo.toml  notes.txt
hw_hf_parser/src/: download.rs  lib.rs  main.rs
hw_hf_parser/src/collections_fun/: hashmap_fun.rs  mod.rs  vec_fun.rs
hw_hf_parser/src/text_extraction/: mod.rs  regex_me.rs
hw_hf_parser/src/text_extraction/use_llm/: mod.rs
medium_summary/: Cargo.toml  Readme.md
medium_summary/src/: main.rs
minigrep/src/: lib.rs  main.rs
rust_by_examples/src/: main.rs
rust_unit_testing/src/: lib.rs
variables/src/: main.rs
weather_me/: Cargo.toml  README.md
weather_me/db/: test.db  test.tb
weather_me/src/: main.rs  reflect_util.rs  sqlite_util.rs  weather_data.rs
(+3 files in other folders)
