[package]
name = "hw_hf_parser"
version = "0.1.0"
edition = "2021"
authors = ['Luke Garzia']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }