[package]
name = "weather_me"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = {version = "0.30",  features = ["bundled"] }
bevy_reflect = "0.12"
# https://crates.io/crates/bevy_reflect